src/client/app/admin/dashboard/dashboard.styles.scss
.category-options {
  overflow-x: hidden;
}

.add-btn-container {
  margin-bottom: 15px;
  padding-right: 20px;
  text-align: right;

  .btn {
    border: 2px solid;
    border-radius: 10px;
    font-weight: bold;
    display: inline-flex;
    vertical-align: middle;

    i {
      margin-top: -1px;
      line-height: .8;
    }
  }
}

